--- a/index.html
+++ b/index.html
@@ -6,4 +6,16 @@
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
       })();
-    }</script><link href=/static/css/app.671549f819ada157093c2d6c0d0751fd.css rel=stylesheet></head><body><app></app><script src=static/js/jquery.min.js></script><script src=static/lightbox2/js/lightbox.min.js></script><script type=text/javascript src=/static/js/manifest.fe4e42811ec65a47985c.js></script><script type=text/javascript src=/static/js/vendor.234059a7349321e00abf.js></script><script type=text/javascript src=/static/js/app.7e134687d8e43de4a026.js></script></body></html>
+    }</script><link href=/static/css/app.671549f819ada157093c2d6c0d0751fd.css rel=stylesheet></head><body><app></app><script src=static/js/jquery.min.js></script><script src=static/lightbox2/js/lightbox.min.js></script><script type=text/javascript src=/static/js/manifest.fe4e42811ec65a47985c.js></script><script type=text/javascript src=/static/js/vendor.234059a7349321e00abf.js></script><script type=text/javascript src=/static/js/app.7e134687d8e43de4a026.js></script>
+      
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126966196-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-126966196-3');
+</script>
+      
+      </body></html>
